# api/api.go
@@ -42,17 +42,18 @@ func New(opt *RouterOptions) *gin.Engine {
 
 	apiV1.POST("/auth/register", handlerV1.Register)
 	apiV1.POST("/auth/verify", handlerV1.Verify)
+	apiV1.POST("/auth/login", handlerV1.Login)
 
-	apiV1.POST("/users", handlerV1.CreateUser)
+	apiV1.POST("/users", handlerV1.AuthMiddleware("users", "create"), handlerV1.CreateUser)
 	apiV1.GET("/users/:id", handlerV1.GetUser)
-	apiV1.PUT("/users/:id", handlerV1.UpdateUser)
+	apiV1.PUT("/users/:id", handlerV1.AuthMiddleware("users", "update"), handlerV1.UpdateUser)
 	apiV1.GET("/users", handlerV1.GetAllUsers)
-	apiV1.DELETE("/users/:id", handlerV1.DeleteUser)
+	apiV1.DELETE("/users/:id", handlerV1.AuthMiddleware("users", "delete"), handlerV1.DeleteUser)
 	apiV1.GET("/users/email/:email", handlerV1.GetUserByEmail)
 
-	apiV1.POST("/posts", handlerV1.AuthMiddleware, handlerV1.CreatePost)
+	apiV1.POST("/posts", handlerV1.AuthMiddleware("posts", "create"), handlerV1.CreatePost)
 
-	apiV1.POST("/categories", handlerV1.CreateCategory)
+	apiV1.POST("/categories", handlerV1.AuthMiddleware("categories", "create"), handlerV1.CreateCategory)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
